Ensure ruler is visible when loaded the first time

--- a/stylesheets/highlight-ruler.css
+++ b/stylesheets/highlight-ruler.css
@@ -1,3 +1,3 @@
-.highlight-ruler:hover, .highlight-ruler-dragging {
+.highlight-ruler, .highlight-ruler-dragging {
   cursor:ns-resize;
 }
